[package]
name = "gdrivefs"
version = "0.1.1"
authors = ["jonallie"]

[dependencies]
docopt = "0.6"
env_logger = "0.3"
fuse = "0.3.1"
google-drive3 = "1.0.7+20171201"
hyper = "0.10"
hyper-rustls = "0.6"
inth-oauth2 = "0.12"
libc = "0.2.42"
log = "0.4.1"
poolcache = "0.1.1"
rustc-serialize = "0.3.24"
serde_json = "1.0.19"
threadpool = "1.7.1"
time = "0.1.40"
urlparse = "0.7.3"
yup-oauth2 = "1.0.7"
